# ERPNext-Basic-GUI

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  setup.py
erpnext_basic_gui/: hooks.py  modules.txt
erpnext_basic_gui/public/css/: sidebar_customizations.css
erpnext_basic_gui/public/js/: sidebar_customizations.js
