[project]
name = "erpnext_basic_gui"
authors = [
    { name = "OpenAEC Foundation", email = "info@openaec.org"}
]
description = "Simplified sidebar navigation for Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
